--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de receita</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <main>
@@ -64,10 +65,10 @@
         <div class="texto" id="paragrafo">
             <p>Para a montagem, faça um furo no centro dos cupcakes e recheie com o brigadeiro de café reservado. Decore as superfícies dos cupcakes com o chantilly reservado, fazendo círculos. Decore com grãos de café e leve à geladeira até o momento de servir.</p>
         </div>
-
-
+        
+        <a href="https://br.linkedin.com/in/davi-amorim-mendes-022a01307" id="link" target="_blank"><p>(<i class="fa-solid fa-user"></i>) davi.amorim.mendes.082@gmail.com</p></a>
     </main>
-
+    
     <footer>
             <p>Feito com &#x2764; pela Rockseat</p>
     </footer>
